bug 201116: [Viewers] Compare will silently discard additional contentMergeViewers associated with the same file extension

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2000, 2008 IBM Corporation and others.
+# Copyright (c) 2000, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -141,3 +141,6 @@ CompareWithOtherResourceDialog_externalFolderMainButton=Browse...
 CompareWithOtherResourceDialog_externalFolderRadioButton=External folder
 CompareWithOtherResourceDialog_workspaceMainButton=Browse...
 CompareWithOtherResourceDialog_workspaceRadioButton=Workspace
+
+CompareContentViewerSwitchingPane_defaultViewer=Default
+CompareContentViewerSwitchingPane_switchButtonTooltip=Switch
