Bug 266533 - Remove SWT-Dependency from ui.workbench: * move all SWT-stuff out - readding generic stuff later

--- a/examples/org.eclipse.e4.demo.e4photo/plugin.xml
+++ b/examples/org.eclipse.e4.demo.e4photo/plugin.xml
@@ -58,7 +58,7 @@
          id="product"
          point="org.eclipse.core.runtime.products">
       <product
-            application="org.eclipse.e4.ui.workbench.application"
+            application="org.eclipse.e4.ui.workbench.swt.application"
             name="e4 photo demo">
          <property
                name="appName"
