Bug 265740 - [Apply Patch] Opening a patch that will create a file logs ResourceExceptions

--- a/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
+++ b/bundles/org.eclipse.compare/plugins/org.eclipse.compare/compare/org/eclipse/compare/internal/CompareMessages.properties
@@ -144,3 +144,5 @@ CompareWithOtherResourceDialog_workspaceRadioButton=Workspace
 
 CompareContentViewerSwitchingPane_defaultViewer=Default
 CompareContentViewerSwitchingPane_switchButtonTooltip=Switch
+
+ReaderCreator_fileIsNotAccessible=Cannot create a reader because the file is inaccessible.
