Bug 134526 [Contributions] popupMenus ext point support for part input  Supply an activeEditorInput to be used in core expressions

--- a/tests/org.eclipse.ui.tests/plugin.xml
+++ b/tests/org.eclipse.ui.tests/plugin.xml
@@ -484,6 +484,13 @@
             id="org.eclipse.ui.tests.api.MockEditorPart2">
       </editor>
       <editor
+            name="Mock Reusable Editor 1"
+            extensions="mockr1"
+            icon="icons/mockeditorpart1.gif"
+            class="org.eclipse.ui.tests.api.MockReusableEditorPart"
+            id="org.eclipse.ui.tests.api.MockReusableEditorPart1">
+      </editor>
+      <editor
             name="Mock Editor Save"
             extensions="mocksave"
             icon="icons/mockeditorpart1.gif"
