Bug 262615 [Commands] Add test for TextActionHandler

--- a/tests/org.eclipse.ui.tests/plugin.xml
+++ b/tests/org.eclipse.ui.tests/plugin.xml
@@ -465,6 +465,12 @@
             name="NonRestorableView"
             restorable="false">
       </view>
+      <view
+            class="org.eclipse.ui.tests.internal.TextControlView"
+            id="org.eclipse.ui.tests.textHandlerView"
+            name="Text Control view"
+            restorable="true">
+      </view>
 
    </extension>
    <extension
