--- a/update/org.eclipse.update.configurator/build.properties
+++ b/update/org.eclipse.update.configurator/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005 IBM Corporation and others.
+# Copyright (c) 2005, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -11,10 +11,8 @@
 bin.includes = .options,\
                about.html,\
                plugin.properties,\
-               plugin.xml,\
                .,\
                META-INF/,\
-               config.ini,\
-               META-INF/
+               OSGI-INF/
 src.includes = about.html
 source.. = src/
