Bug 162102 [Workbench] User configurability for MAX_RECENT_WORKSPACES

--- a/bundles/org.eclipse.ui.ide.application/plugin.properties
+++ b/bundles/org.eclipse.ui.ide.application/plugin.properties
@@ -12,6 +12,7 @@ Plugin.name = Eclipse IDE UI Application
 Plugin.providerName = Eclipse.org
 
 PreferencePages.Startup = Startup and Shutdown
+PreferencePages.Startup.Workspaces = Workspaces
 
 Perspective.resourcePerspective = Resource
 Perspective.resourceDescription = This perspective is designed to provide general resource viewing and navigation. 
