--- a/bundles/org.eclipse.ui.ide/plugin.properties
+++ b/bundles/org.eclipse.ui.ide/plugin.properties
@@ -219,6 +219,7 @@ PreferenceKeywords.Animations = animations
 PreferenceKeywords.Restore = restore
 PreferenceKeywords.State = state
 PreferenceKeywords.Encoding = encoding
+PreferenceKeywords.RecentWorkspaces = workspaces prompt recent startup
 
 # TODO This stuff is just to help me work on the parsing of the menus extension
 # point.  It is likely not in its final form yet.
