Bug 262811 - [breadcrumb] Provide action to setup debugging in other perspectives

--- a/org.eclipse.debug.ui/plugin.xml
+++ b/org.eclipse.debug.ui/plugin.xml
@@ -2552,6 +2552,8 @@ M4 = Platform-specific fourth key
            autoOpen="false"
            contextId="org.eclipse.debug.ui.debugging"
            viewId="org.eclipse.ui.console.ConsoleView"/>
+     <perspective
+           perspectiveId="org.eclipse.debug.ui.DebugPerspective"/>
   </extension>
   
    <extension
