Bug 262849 [launching] Select Preferred Launcher dialog is somewhat confusing.

--- a/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
+++ b/org.eclipse.debug.ui/ui/org/eclipse/debug/internal/ui/launchConfigurations/LaunchConfigurationsMessages.properties
@@ -202,7 +202,8 @@ CollapseAllLaunchConfigurationAction_2=This action collapses all of the launch c
 SelectLaunchOptionsDialog_3=Select Launch Mode
 SelectLaunchOptionsDialog_4=&Select a supported mode combination:
 SelectLaunchersDialog_0=Select Preferred Launcher
-SelectLaunchersDialog_1=&Override workspace settings:
+SelectLaunchersDialog_1=&Use configuration specific settings
 SelectLaunchersDialog_2=This dialog allows you to specify which launcher to use when multiple launchers are available for a configuration and launch mode.
 SelectLaunchersDialog_4=<a href="ws">Change Workspace Settings...</a>
 SelectLaunchersDialog_5=Description
+SelectLaunchersDialog_launchers=Launc&hers:
