--- a/tests/org.eclipse.ui.tests.navigator/build.properties
+++ b/tests/org.eclipse.ui.tests.navigator/build.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-# Copyright (c) 2005, 2006 IBM Corporation and others.
+# Copyright (c) 2005, 2009 IBM Corporation and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
@@ -9,6 +9,8 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 source.uinavtests.jar = src/
+               
+javacWarnings.uinavtests.jar=-deadCode               
                
 src.includes = about.html
 output.uinavtests.jar = bin/
