Bug 248103 [PropertiesView] Multi-instance Properties View

--- a/bundles/org.eclipse.ui.views/plugin.properties
+++ b/bundles/org.eclipse.ui.views/plugin.properties
@@ -12,5 +12,6 @@ pluginName= Views
 providerName= Eclipse.org
 
 Views.PropertySheet = Properties
+Views.NewPropertySheet = New Properties View
 Views.ContentOutline = Outline
 
